Support API UpdateLocalitySetting.